--- a/grave.html
+++ b/grave.html
@@ -188,7 +188,7 @@
   							  if (status === google.maps.DirectionsStatus.OK) {
   							    directionsDisplay.setDirections(response);
   							  } else {
-  							   window.alert('Directions request failed due to ' + status);
+  							   window.alert('行政區內找不到結果！ ' + status);
   							  }
 							  });
 
