--- a/grave.html
+++ b/grave.html
@@ -162,7 +162,7 @@
 					        marker=new google.maps.Marker({
 					        position: {lat: parseFloat(getlocate1), lng: parseFloat(getlocate2)},
 					        map: map,
-					        title: 'Hello World!',
+					        title: getname,
 					        icon: image,
 					        html: contentStr
 					        });
@@ -222,7 +222,7 @@
 			        markers[i]=new google.maps.Marker({
 			        position: {lat: parseFloat(fixedCor[0]), lng: parseFloat(fixedCor[1])},
 			        map: map,
-			        title: 'Hello World!',
+			        title: xmlData.getElementsByTagName("Name")[i].firstChild.nodeValue,
 			        icon: image,
 			        html: contentString[i]
 			        });
