--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
 						<div class="clear"></div>
 					</div>
 					<div id="map"></div>
+					<footer>&#169;一路好走2016</footer>
 				</div>
 			</div>
 		</div>
