--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta property="og:type" content="website" />
+    		<meta property="og:title" content="一路好走" />
+	    	<meta property="og:description" content="高雄市公墓暨納骨塔查詢系統。" />
+		 <meta property="og:image" content="https://elmas87532.github.io/RIPSS/css/images/logo.png" />
+		 <meta property="og:url" content="https://elmas87532.github.io/RIPSS/index.html" />
+	    	<meta property="og:site_name" content="一路好走'" />
+	    	<meta property="og:locale" content="zh_TW" />
+
 		<link rel="stylesheet" type="text/css" href="css/bone.css">
 		<link rel="Shortcut Icon" type="image/x-icon" href="css/images/icon.ico">
 		<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
