--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta property="og:type" content="website" />
     		<meta property="og:title" content="一路好走" />
 	    	<meta property="og:description" content="高雄市公墓暨納骨塔查詢系統。" />
-		 <meta property="og:image" content="https://github.com/elmas87532/RIPSS/blob/gh-pages/css/images/logo.png?raw=true" />
+		 <meta property="og:image" content="http://beibeihuang.github.io/test/img/banner.png" />
 		 <meta property="og:url" content="https://elmas87532.github.io/RIPSS/index.html" />
 	    	<meta property="og:site_name" content="一路好走'" />
 	    	<meta property="og:locale" content="zh_TW" />
