--- a/grave.html
+++ b/grave.html
@@ -267,7 +267,10 @@
 					<div id="map"></div>
 				</div>
 			</div>
-			<footer>&#169;一路好走2016</footer>
+			<footer>
+				&#169;一路好走2016<br/>
+				opendata from <a href="http://data.kaohsiung.gov.tw/Opendata/index.aspx">Open Data.Kaohsiung</a>
+			</footer>
 		</div>
 	</body>
 </html>
