--- a/index.html
+++ b/index.html
@@ -378,6 +378,10 @@
 					</div>
 					<div id="map"></div>
 				</div>
+				<footer>
+					&#169;一路好走2016<br/>
+					opendata from <a href="http://data.kaohsiung.gov.tw/Opendata/index.aspx">Open Data.Kaohsiung</a>
+				</footer>
 			</div>
 		</div>
 	</body>
